added tests to the functions and explanations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = Signals and systems
 version = "0.1.0"
-description = In this project I created functions, with docstrings in order to describe said functions. Moreover, I also plotted these functions and explained their meanings and the code used to plot them in the README.md file.
+description = In this project I created functions, with docstrings in order to describe said functions, and also tested these functiond. Moreover, I also plotted these functions and explained their meanings and the code used to plot them in the README.md file.
 authors = [
     {name = Sergi, email = "slabordaghirin@tudelft.nl"}
 ]
